Archive2/b9/fdbcd0c6f61518/output
main.cpp: In instantiation of 'class AbstractCollection<int*>':
main.cpp:76:7:   required from 'class TemplateSizedCollection<int*, 10ul, true>'
main.cpp:813:39:   required from here
main.cpp:31:18: error: redeclared with 3 template parameters
     friend class TemplateSizedCollection;
                  ^
main.cpp:73:78: note: previous declaration 'template<class T, long unsigned int size, bool with_pointer, class enable> class TemplateSizedCollection' used 4 template parameters
 template<typename T,size_t size,bool with_pointer,class enable = void> class TemplateSizedCollection;
                                                                              ^
main.cpp: In instantiation of 'class AbstractCollection<int>':
main.cpp:46:7:   required from 'class NumericCollection<int>'
main.cpp:594:7:   required from 'class TemplateSizedCollection<int, 10ul, true>'
main.cpp:815:38:   required from here
main.cpp:31:18: error: redeclared with 3 template parameters
     friend class TemplateSizedCollection;
                  ^
main.cpp:73:78: note: previous declaration 'template<class T, long unsigned int size, bool with_pointer, class enable> class TemplateSizedCollection' used 4 template parameters
 template<typename T,size_t size,bool with_pointer,class enable = void> class TemplateSizedCollection;
                                                                              ^
